--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # ============================================
 # UPI DISPUTE RESOLUTION - Docker Compose (MVP)
 # ============================================
@@ -32,19 +30,17 @@ services:
       BANK_API_KEY: ${BANK_API_KEY:-dev-key}
       NEFT_API_KEY: ${NEFT_API_KEY:-dev-key}
     volumes:
-      - ./backend:/app
-      - backend-cache:/root/.m2  # Maven cache
-      - ./disputes.db:/app/disputes.db  # Persistent SQLite DB (dev)
+      - backend-data:/app/data  # Persistent SQLite DB
     depends_on:
       - frontend
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8000/api/health"]
       interval: 10s
       timeout: 5s
-      retries: 5
-      start_period: 30s
+      retries: 10
+      start_period: 60s
     logging:
       driver: "json-file"
       options:
@@ -171,7 +167,7 @@ networks:
 
 # ============ VOLUMES ============
 volumes:
-  backend-cache:
+  backend-data:
     driver: local
   # ml-cache:  # Re-enable when Phase 2 ML is added
   #   driver: local
