--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 # H2 Console (optional - for debugging)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 
 # Logging
 logging.level.root=INFO
